kubernetes/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-idwall
  namespace: idwall-app
  labels:
    app: app-idwall
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-idwall
  template:
    metadata:
      labels:
        app: app-idwall
    spec:
      containers:
      - name: app-idwall
        image: app-idwall:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 3
