kubernetes/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-idwall-service
  namespace: idwall-app
spec:
  selector:
    app: app-idwall
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: NodePort
